omni/tests/goldens/types/undefined_ident_24.omni
let result24:int = missing24
